<resources>
    <string name="app_name">DigitalSofia</string>
    <string name="loader_wait_message">We are looking for your data, it might take a moment.</string>
    <string name="error">Something went wrong</string>
    <string name="error_loading_error">Sorry, it seems something went wrong. Please try again.</string>
    <string name="error_server_error_short">Server error</string>
    <string name="error_server_error">Error while receiving data from the server, please try again later</string>
    <string name="error_network_error_short">Network error</string>
    <string name="error_network_error">Error during network request, please try again later</string>
    <string name="error_network_not_available">No internet connection</string>
    <string name="error_invalid_format">Invalid format</string>
    <string name="error_not_enough_characters">Not enough characters in the field.</string>
    <string name="error_cannot_be_empty">This field cannot be empty.</string>
    <string name="error_password_must_contain_only_numbers">Password must contain only numbers</string>
    <string name="must_contain_only_numbers">Only numbers are allowed here</string>
    <string name="error_empty_state_tile">Sorry, there is no information.</string>
    <string name="error_empty_state_description">Try reloading the screen to see the missing data.</string>
    <string name="error_no_consent_to_share_data">No consent to share data</string>
    <string name="error_pin_code_not_setup">Pin code not setup</string>
    <string name="error_biometric">Error use biometric</string>
    <string name="error_user_not_setup_correct">User not setup</string>
    <string name="error_user_is_not_identified">User is not identified</string>
    <string name="error_user_name_not_found">User name not found</string>
    <string name="error_user_email_not_found">User email not found</string>
    <string name="error_user_phone_not_found">User phone not found</string>
    <string name="error_user_personal_identification_number_not_found">User personal identification number not found</string>
    <string name="error_request_is_being_processed">The request is being processed, please wait and click update</string>
    <string name="error_information_is_outdated">Information is outdated and no longer relevant</string>
    <string name="error_unexpected">An unexpected error occurred</string>
    <string name="error_file_download">An error occurred while trying to open the file</string>
    <string name="error_no_internet_connection">Please, check your internet connection.</string>
    <string name="error_invalid_user_data">Wrong data is entered.</string>
    <string name="error_logout_count_exceeded">Sorry, too many tries for login. Please, try again later.</string>
    <string name="error_common">Sorry, something went wrong. Let\'s try again.</string>
    <string name="sdk_error_sdk_not_set">Incorrect configuration, please try again or restart the application</string>
    <string name="sdk_error_user_not_specified">User not specified, try again or restart the application</string>
    <string name="sdk_error_user_data_error">Incorrect entry of Eurotrust data</string>
    <string name="sdk_error_wrong_input">Sorry, something went wrong. Let\'s try again and make sure all data is correct.</string>
    <string name="sdk_error_cancelled">Activity is cancelled. You can try again.</string>
    <string name="sdk_error_unknown">Unknown error, try again or restart the application</string>
    <string name="sdk_error_critical">Critical error, try again or restart the application</string>
    <string name="sdk_error_user_not_verified">User not verified, try again.</string>
    <string name="sdk_error_user_profile_information_not_complete">User information is incomplete, you must update your user information to continue</string>
    <string name="sdk_error_user_profile_rejected">User information was rejected, you must provide new information to continue</string>
    <string name="error_blocked_title">Entrance blocked</string>
    <string name="error_blocked_description">Unlock in %s seconds</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="apply">Apply</string>
    <string name="retry">Retry</string>
    <string name="reload">Reload</string>
    <string name="next">Next</string>
    <string name="proceed">Proceed</string>
    <string name="start">Start</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="share">Share</string>
    <string name="select">Select</string>
    <string name="invite">Invite</string>
    <string name="delete">Delete</string>
    <string name="skip">Skip</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="view_all">View All</string>
    <string name="see_all">See All</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>
    <string name="edit_data">Edit data</string>
    <string name="verify">Verify</string>
    <string name="done">Done</string>
    <string name="bullet">•</string>
    <string name="confirm">Confirm</string>
    <string name="continue_label">Continue</string>
    <string name="optional">Optional</string>
    <string name="unknown">Unknown</string>
    <string name="need_help">Need help?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="oops">Oops</string>
    <string name="oops_with_dots">Oops…</string>
    <string name="sorry">Sorry</string>
    <string name="logout">Logout</string>
    <string name="try_again">Try again</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update">Update</string>
    <string name="wait">Please wait</string>
    <string name="information">Information</string>
    <string name="success">Success</string>
    <string name="ready">Ready</string>
    <string name="channel_name">DigitalSofia</string>
    <string name="channel_description">notifications from the DigitalSofia application</string>
    <string name="warning_label">Warning</string>
    <string name="notifications_window_label">In order for application to work properly, you must allow notifications. Current notification: %s</string>
    <string name="settings_label">Settings</string>
    <string name="passcode_btn_1">1</string>
    <string name="passcode_btn_2">2</string>
    <string name="passcode_btn_3">3</string>
    <string name="passcode_btn_4">4</string>
    <string name="passcode_btn_5">5</string>
    <string name="passcode_btn_6">6</string>
    <string name="passcode_btn_7">7</string>
    <string name="passcode_btn_8">8</string>
    <string name="passcode_btn_9">9</string>
    <string name="passcode_btn_0">0</string>
    <string name="permissions_modal_title">Access required</string>
    <string name="permissions_modal_description">For the application to work, we need the following permissions: %s</string>
    <string name="permissions_modal_step_1">Turn on «%s» in settings.</string>
    <string name="permissions_modal_step_2">After that, go back to the app.</string>
    <string name="permissions_modal_open_settings">Open settings</string>
    <string name="permissions_contacts">Contacts</string>
    <string name="permissions_camera">Camera</string>
    <string name="permissions_location">Location</string>
    <string name="biometric_error_title">Biometric error</string>
    <string name="biometric_error_description">User identification error, you may have unlocked the device using an alternative method, unlock the device using your fingerprint and try again</string>
    <string name="pending_requests">Pending requests</string>
    <string name="settings_title">Settings</string>
    <string name="settings_delete_profile">Delete Profile</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_application_language">Application language</string>
    <string name="settings_security_on_entry">Security on Entry</string>
    <string name="settings_change_pin">Change PIN</string>
    <string name="auth_method_title">Login Protection</string>
    <string name="auth_method_pin">PIN</string>
    <string name="auth_method_biometric">Biometric data</string>
    <string name="change_pin_create_title">Change PIN</string>
    <string name="change_pin_create_description_1">Enter a 6-digit PIN to access your account</string>
    <string name="change_pin_create_description_2">Repeat the 6 digit PIN code to confirm</string>
    <string name="change_pin_create_message_ok">Successfully changed PIN</string>
    <string name="change_pin_enter_title">Change PIN</string>
    <string name="change_pin_enter_description">Enter your current PIN to make the change</string>
    <string name="profile_title">Profile</string>
    <string name="language_title">Application language</string>
    <string name="language_bg">Bulgarian</string>
    <string name="language_en">English</string>
    <string name="profile_delete_confirm_description">If you delete your profile you will loose all of your saved documents and information.</string>
    <string name="profile_delete_confirm_button">Delete</string>
    <string name="profile_delete_error_description">The profile can\'t be deleted. There is a pending task. When it\'s completed, you can delete your profile.</string>
    <string name="start_title">Welcome to Digital Sofia</string>
    <string name="start_description">The mobile desk of Sofia Municipality</string>
    <string name="start_button">Enter Digital Sofia</string>
    <string name="registration_enter_egn_title">Welcome to Digital Sofia</string>
    <string name="registration_enter_egn_description">Please enter your Personal ID (EGN) to continue with the remote identification:</string>
    <string name="registration_enter_egn_egn_title">EGN</string>
    <string name="registration_enter_egn_egn_hint">Enter EGN</string>
    <string name="registration_enter_egn_egn_error">We\'re sorry but at the moment the service is only available for Bulgarian citizens with valid Personal ID.</string>
    <string name="registration_enter_egn_email_title">Email</string>
    <string name="registration_enter_egn_email_hint">Enter Email Address</string>
    <string name="registration_enter_egn_email_error">Please enter a correct E-mail</string>
    <string name="registration_enter_egn_phone_title">Phone number</string>
    <string name="registration_enter_egn_phone_hint">Enter phone number</string>
    <string name="registration_enter_egn_phone_error">Please enter a correct phone number</string>
    <string name="registration_enter_egn_conditions">I agree to the terms and conditions of Digital Sofia</string>
    <string name="registration_enter_egn_conditions_error">Please agree to the terms and conditions</string>
    <string name="registration_enter_egn_conditions_error_evrotrust">You does not have an Evrotrust account, create an account and repeat</string>
    <string name="registration_enter_phone_input_title">Phone number</string>
    <string name="registration_enter_phone_input_hint">Enter phone number</string>
    <string name="registration_enter_email_title">Welcome to Digital Sofia</string>
    <string name="registration_enter_email_description">We need some additional information to create your account</string>
    <string name="registration_share_your_data_title">Share your data</string>
    <string name="registration_share_your_data_description">To receive access to the service you need to confirm your identity.\n\n\nIf you don\'t want to share your personal data, you can submit your form by visiting your local administration.</string>
    <string name="registration_error_button">Start registration from the beginning</string>
</resources>