<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle.24spRegularMainColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_48"
                android:layout_marginEnd="@dimen/margin_32"
                android:text="@string/registration_share_your_data_title" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle.20spRegularMainColor"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_64"
                android:layout_marginEnd="@dimen/margin_32"
                android:layout_weight="1"
                android:gravity="center|top"
                android:singleLine="false"
                android:text="@string/registration_share_your_data_description" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_64"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNo"
                    style="@style/ButtonStyle.Transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4"
                    android:text="@string/no"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnYes"
                    style="@style/ButtonStyle.Blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:text="@string/yes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.digital.sofia.ui.view.ErrorView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:visibility="gone"
        app:error_view_button_one_title="@string/try_again"
        app:error_view_button_two_title="@string/registration_error_button"
        app:error_view_description="@string/error_request_is_being_processed"
        app:error_view_icon="@drawable/img_logo_small"
        app:error_view_show_button_one="true"
        app:error_view_show_button_two="true"
        app:error_view_show_description="true"
        app:error_view_show_title="false"
        tools:visibility="gone" />

    <com.digital.sofia.ui.view.LoaderView
        android:id="@+id/loaderView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:visibility="gone"
        tools:visibility="gone" />

</FrameLayout>